Fix align doesn't work with Width settings

--- a/assets/js/atomic/blocks/product-elements/button/style.scss
+++ b/assets/js/atomic/blocks/product-elements/button/style.scss
@@ -59,28 +59,11 @@
 
 // Width setting
 .wp-block-button {
-	&.has-custom-width {
-		max-width: none;
-
-		.wp-block-button__link {
-			width: 100%;
+	@for $i from 1 through 4 {
+		&.wp-block-button__width-#{$i * 25} {
+			.wp-block-button__link {
+				width: $i * 25%; // 25%, 50%, 75%, 100%
+			}
 		}
-	}
-
-	&.wp-block-button__width-25 {
-		width: 25%;
-	}
-
-	&.wp-block-button__width-50 {
-		width: 50%;
-	}
-
-	&.wp-block-button__width-75 {
-		width: 75%;
-	}
-
-	&.wp-block-button__width-100 {
-		width: 100%;
-		flex-basis: 100%;
 	}
 }
